# parakeet-dictation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  transcriber.py
.ralph/: items.json  progress.md
desktop/electrobun/: README.md
desktop/electrobun/src/bun/: index.ts
desktop/electrobun/src/mainview/: index.css  index.html  index.ts
sdk/: electrobun.md
src/local_ai_dictation/: audio.py  bridge.py  dictation.py  whisper.py
src/parakeet/: audio.py  bridge.py  cli.py  desktop.py  dictation.py  doctor.py  errors.py  model.py  types.py
tests/: test_bridge.py  test_desktop.py  test_doctor.py  test_model.py  test_output.py  test_vad.py  test_whisper.py
