[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-dictation"
version = "0.1.0"
description = "Packaged Parakeet dictation CLI for Linux and WSL2"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Parakeet Dictation" }]
dependencies = [
  "nemo_toolkit[asr]",
  "numpy<2.0",
  "pyaudio",
  "pyperclip",
  "webrtcvad-wheels",
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
parakeet = "parakeet.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
